--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,12 @@
 }
 
 .App-logo {
-  /* animation: App-logo-spin infinite 20s linear; */
   height: 80px;
 }
 
 .App-header {
-  /* background-color: #222; */
   background-color: darkgray;
-  height: 150px;
+  height: 170px;
   padding: 20px;
   color: white;
   margin-bottom: 20px;
@@ -18,6 +16,7 @@
 
 .App-title {
   font-size: 1.5em;
+  margin-top: 0px;
 }
 
 .App-intro {
@@ -25,7 +24,6 @@
 }
 
 .order-book {
-  /* padding-top: 10em; */
   overflow-y: scroll;
   max-height: 100em;
   display: inline-block;
@@ -38,6 +36,10 @@
 
 .orders-list {
   border-style: inset;
+}
+
+.disclaimer {
+  padding-top: 30px;
 }
 
 @keyframes App-logo-spin {
